CSS reset images to fix easy composites logo on small screen widths

--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -10,3 +10,14 @@ $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 $breakpoint-xxl: 1600px;
 $breakpoint-xxxl: 1920px;
+
+// https://www.youtube.com/watch?v=345V2MU3E_w
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  font-style: italic;
+  background-repeat: no-repeat;
+  background-size: cover;
+  shape-margin: 1rem;
+}
